tests/compile_failures/attributes/invalid_list_values.stderr
error: not a valid attribute or tag list
 --> tests/compile_failures/attributes/invalid_list_values.rs:3:14
  |
3 | #[attributes(add(div, "span"))]
  |              ^^^^^^^^^^^^^^^^
